<resources>
    <string name="app_name">Safefood Mitra</string>
    <string name="mobilenumber">Enter mobile number</string>
    <string name="next">Next</string>
    <string name="trial">Free Trial: Regulatory Compliance and Food Safety Training (limited video) will be accessible Inspection, Record and documents will not be accessible.</string>
    <string name="userotp">Enter OTP</string>
    <string name="dash">Dashboard</string>
    <string name="zones">Zones</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="users">Users</string>
    <string name="Records">Records</string>
    <string name="equipement">Equipment</string>
    <string name="deparment">Deparments</string>
    <string name="deparments">Deparment</string>
    <string name="locations">Locations</string>
    <string name="logout">LogOut</string>
    <string name="units">Unit</string>
    <string name="surepopup">You Sure, that you want to logout?</string>
    <string name="export">You want Export file</string>
    <string name="deletepopup">You Sure, that you want to Delete?</string>
    <string name="yespopup">Yes</string>
    <string name="closepopup">Close</string>
    <string name="nopopup">No</string>
    <string name="reguired">required</string>
    <string name="invalidemail">invalid email</string>
    <string name="invalidno">invalid number</string>
    <string name="nointernet">No internet connection found ! try again with internet connection</string>
    <string name="aadzone">Enter Zone name</string>
    <string name="editzonenme">Edit Zone name</string>
    <string name="aadunitnme">Enter Unit name</string>
    <string name="editunitnme">Edit Unit name</string>
    <string name="aadunitcity">Enter City name</string>
    <string name="editunitcity">Edit City name</string>
    <string name="statenme">Enter State name</string>
    <string name="editstatenme">Edit State name</string>
    <string name="zipcode">Enter ZipCode name</string>
    <string name="editzipcode">Edit ZipCode name</string>
    <string name="addeupmentnme">Enter Equpment name</string>
    <string name="editeupmentnme">Edit Equpment name</string>
    <string name="addrecordnme">Enter Record name</string>
    <string name="editrecordnme">Edit Record name</string>
    <string name="addlocationnme">Enter Location name</string>
    <string name="editlocationnme">Edit Location name</string>
    <string name="adeparmentsnme">Enter Deparments name</string>
    <string name="editdeparmentsnme">Edit Deparments name</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="add">Add Zone</string>
    <string name="editzone">Edit Zone</string>
    <string name="confirmationpopup">confirmation popUp!</string>
    <string name="inspection">Inspection</string>
    <string name="inspectionrespo">Inspection Responsibility</string>
    <string name="addunit">Add Unit</string>
    <string name="editunit">Edit Unit</string>
    <string name="edituser">Edit User</string>
    <string name="addequpment">Add Equpment</string>
    <string name="editequpment">Edit Equpment</string>
    <string name="addrecords">Add Record</string>
    <string name="editrecords">Edit Record</string>
    <string name="editinspectrespo">Edit Inspection Responsibility</string>
    <string name="addlocs">Add Location</string>
    <string name="addinspect">Add Inspection Responsibility</string>
    <string name="editlocs">Edit Location</string>
    <string name="addeparts">Add Deparment</string>
    <string name="editdeparts">Edit Deparment</string>
    <string name="search">Search Here</string>
    <string name="norecord">No Records found</string>
    <string name="delete">Delete</string>
    <string name="fsmsdocuments">FSMS DOCUMENTS</string>
    <string name="safefoodmitra">SAFE FOOD MITRA AUDIT</string>
    <string name="foodsafetystandard">FOOD SAFETY STANDARD</string>
    <string name="addinspe">Add Inspection</string>
    <string name="commentbox">Comment Box</string>
    <string name="send">Send</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="undo">Undo Mode</string>
    <string name="redo">Redo Mode</string>
    <string name="inspedetail">Inspection Details</string>
    <string name="closeinspection">Close Inspection</string>
    <string name="adduser">Add User</string>
    <string name="emaildi">Enter email id</string>
    <string name="editemaildi">Edit email id</string>
    <string name="firstnme">Enter First name</string>
    <string name="editfirstnme">Edit First name</string>
    <string name="secondnme">Enter Last name</string>
    <string name="editsecondnme">Edit Last name</string>
    <string name="editmobilenum">Edit Mobile Number</string>
    <string name="joballocation">Job Allocation</string>
    <string name="select">Select Values :</string>
    <string name="rm">Record Name</string>
    <string name="rv">Record Verification</string>
    <string name="cm">Cleaning Task</string>
    <string name="pt">PM Task</string>
    <string name="fum">Fumigation Task</string>
    <string name="cmv">CM verification</string>
    <string name="rd">Reference Documents</string>
    <string name="sfmda">Safe Food Mitra Audit report update</string>
    <string name="advancefilter">Advance Filter</string>
    <string name="filter">Filter</string>
    <string name="inspectfilter">Inspection Filter</string>
    <string name="category">Category</string>
    <string name="parentcategory">Parent Category</string>
    <string name="searchfilter">Search</string>
    <string name="subcategory">SubCategory</string>
    <string name="parametercategory">Category2</string>
    <string name="parametercategory1">Category3</string>
    <string name="parametercategory2">Category4</string>
    <string name="productname">Product Name</string>
    <string name="key">Product Name</string>
    <string name="keyword">Keyword</string>
    <string name="sno">S.No.</string>
    <string name="parameter">Parameter</string>
    <string name="permissablelimits">Permissable Limits</string>
    <string name="saveimage">Save Image</string>
    <string name="allocation">Allocation</string>
    <string name="logingo">login </string>
    <string name="registergo">Register </string>
    <string name="editprofile">Edit Profile</string>
    <string name="date">Date</string>
    <string name="loading">Loading ...</string>
    <string name="download">Download</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="responsbility">Responsbility</string>
    <string name="cleaningmaintenance">Cleaning and Maintenance</string>
    <string name="showdilog">Unauthorised</string>
    <string name="repateday">Repeat Day</string>
    <string name="time">Time</string>
    <string name="startdate">Start Date</string>
    <string name="cmfdetails">CMF Details</string>
    <string name="cmftypes">CMF Types</string>
    <string name="zone">Zone</string>
    <string name="assigntime">Assign Time</string>
    <string name="assigndate">Assign Date</string>
    <string name="location">Location</string>
    <string name="sublocation">Sub Location</string>
    <string name="removetask">Remove Task</string>
    <string name="sureremovetask">Are you want to Remove Task</string>
    <string name="beforimag">Before Image</string>
    <string name="afterimag">After Image</string>
    <string name="comment">Attendant Comment</string>
    <string name="selectitem">Select Item</string>
    <string name="place">Place</string>
    <string name="closefrom">Close From</string>
    <string name="closeto">Close To</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="Usernme">User name</string>
    <string name="inprocessdate">In Process Date</string>
    <string name="started">Get Started</string>
    <string name="signup">SingUp</string>
    <string name="donthave">Don\'t have an account?</string>
    <string name="login">I\'m already a Login</string>
    <string name="notunitid">Please Contact App Admin</string>
    <string name="nounitidtitle">Can\'t find unit id</string>
    <string name="detail1">Track each complaint through its lifecycle from recording and initiation to closure, ensuring that nothing slips through the cracks</string>
    <string name="detailtitle1">INSPECTION</string>
    <string name="detail2">Tools to plan, execute and track cleaning, pest management, and preventive maintenance of the equipment as well as facility.</string>
    <string name="detailtitle2">CLEANING &amp; MANITENANCE</string>
    <string name="detail3">Updated FSSAI, USFDA, WHO, CODEX etc. standards is very fertile soil for standard knowledge presented in an easy to understand form .</string>
    <string name="detailtitle3">FOOD SAFETY STANDARDS</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="companyname">Company Name</string>
    <string name="contactinformation"><b>Dear User,</b>\nThis is a unit-specific funcation.Please ask your unit App administrator to get access
    rights or fill the below form to become a unit admin.However, You are authorized to use the Food Safety Standard.</string>
    <string name="rs">Rs.</string>
    <string name="verificationcomment">Verification Comment</string>
    <string name="clear">Clear</string>
    <string name="signature">Signature</string>
    <string name="verified">Verified</string>
    <string name="taskattended">Task Created By:</string>
    <string name="verifiedby">Verified by:</string>
    <string name="verifiedon">Verified On:</string>
    <string name="verifiedcomment">Verified Comment</string>
    <string name="verifiedsign">Verified Sign</string>
    <string name="safefoodmitraaudit">SAFE FOOD MITRA AUDIT</string>
    <string name="auditreport">Audit Report</string>
    <string name="all">All</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="newreportstart">Start New Audit</string>
    <string name="auditdescp">Food Safety &amp; Hygiene Checklist</string>
    <string name="audittitle">Start new audit</string>
    <string name="unitooutletheading">Unit/Outlet Name*</string>
    <string name="unitooutlet">Enter Unit/Outlet</string>
    <string name="conductheading">Conducted on*</string>
    <string name="conduct">Enter Conducted</string>
    <string name="conductbyheading">Conducted by*</string>
    <string name="conductby">Enter Conducted by</string>
    <string name="locationheading">Conducted by*</string>
    <string name="locationfilter">Enter Filter Location</string>
    <string name="start">Start</string>
    <string name="startpopup">Are you sure you want to start?</string>
    <string name="internalexternal">Internal and external</string>
    <string name="hyginetitle">Food Safety &amp; Hygine Checklist</string>
    <string name="outlet">Outlet Name</string>
    <string name="preview">Preview</string>
    <string name="submitpreview">Submit Report For Review</string>
    <string name="addnote">Add Note...</string>
    <string name="adddepartment">Add Department</string>
    <string name="auditpart1">Audit Part 1</string>
    <string name="auditpart2">Audit Part 2</string>
</resources>