<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/dotsroundshape"
       android:orientation="vertical">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/auditreport"
           android:textColor="@color/black"
           android:textSize="@dimen/login"
           android:padding="@dimen/pad5"
           android:textStyle="bold"
           />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="@dimen/pad5"
           android:gravity="center|left"
           android:orientation="horizontal">
           <ImageView
               android:layout_width="@dimen/pad10"
               android:layout_height="@dimen/pad10"
               android:src="@drawable/ic_baseline_dot"/>
           <TextView
               android:id="@+id/tvAll"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/all"
               android:paddingLeft="@dimen/pad5"
               android:textColor="@color/black"
               android:textSize="@dimen/login"
               android:textStyle="bold"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="@dimen/pad5"
           android:gravity="center|left"
           android:orientation="horizontal">
           <ImageView
               android:layout_width="@dimen/pad10"
               android:layout_height="@dimen/pad10"
               android:src="@drawable/ic_baseline_dot"/>
           <TextView
               android:id="@+id/tvInternalAudit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/internal"
               android:paddingLeft="@dimen/pad5"
               android:textColor="@color/black"
               android:textSize="@dimen/login"
               android:textStyle="bold"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="@dimen/pad5"
           android:gravity="center|left"
           android:orientation="horizontal">
           <ImageView
               android:layout_width="@dimen/pad10"
               android:layout_height="@dimen/pad10"
               android:src="@drawable/ic_baseline_dot"/>
           <TextView
               android:id="@+id/tvExternalAudit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/external"
               android:paddingLeft="@dimen/pad5"
               android:textColor="@color/black"
               android:textSize="@dimen/login"
               android:textStyle="bold"
               />
       </LinearLayout>

       <TextView
           android:id="@+id/tvNewStartAudit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/newreportstart"
           android:textColor="@color/black"
           android:textSize="@dimen/login"
           android:padding="@dimen/pad5"
           android:textStyle="bold"
           />

   </LinearLayout>
</LinearLayout>