<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lineardetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:weightSum="1"
            android:gravity="right">
            <ImageButton
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel1"
                android:padding="@dimen/pad5"
                android:layout_gravity="right"
                android:background="@android:color/transparent"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/tverror"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contactinformation"
                android:textColor="@color/black"
                android:textSize="@dimen/login"
                android:padding="@dimen/pad5"
                android:layout_weight=".85"
                android:gravity="center|start"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad7"
            android:background="@drawable/editback1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="left|start"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="@dimen/pad5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black1"
                    android:textSize="@dimen/login" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad7"
            android:background="@drawable/editback1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/usernumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="left|start"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="@dimen/pad5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black1"
                    android:textSize="@dimen/login" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad7"
            android:background="@drawable/editback1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="left|start"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="@dimen/pad5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black1"
                    android:textSize="@dimen/login" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad7"
            android:background="@drawable/editback1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/usercompanyname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="left|start"
                    android:hint="@string/companyname"
                    android:inputType="text"
                    android:padding="@dimen/pad5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black1"
                    android:textSize="@dimen/login" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad7"
            android:background="@drawable/editback1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/userlocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="left|start"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:padding="@dimen/pad5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black1"
                    android:textSize="@dimen/login" />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/tvsave"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/login"
            android:padding="@dimen/pad3"
            android:textAlignment="center"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="@dimen/pad7"
            android:background="@drawable/btnback1"

            />
    </LinearLayout>

</LinearLayout>